--- a/plugin.yml
+++ b/plugin.yml
@@ -6,7 +6,7 @@ commands:
    createkit:
      description: Create a new kit
      aliases: [makekit, newkit, addkit]
-     usage: /<command> <name> <in shop (yes/no)> [price in coins]
+     usage: /<command> <name> [price in coins]
    kit:
       description: Open the GUI for the kits
       aliases: [kits]
